<resources>
    <string name="app_name">EasyReach</string>

    <string-array name="services">
        <item>Netflix</item>
        <item>Amazon Prime</item>
        <item>Hulu</item>
        <item>Vudu</item>
        <item>HBO Now</item>
        <item>Youtube Originals</item>
        <item>None</item>
    </string-array>
    <string name="fcm_message"> New Notification </string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="default_notification_channel_name">default</string>
    <string name="username">/@EasyReachDev</string>
    <string name="Notifications" />
    <string name="years">Years</string>
    <string-array name="egyptian_cities">
        <item>Cairo, Egypt</item>
        <item>Alexandria, Egypt</item>
        <item>Giza, Egypt</item>
        <item>Shubra El-Kheima, Egypt</item>
        <item>Port Said, Egypt</item>
        <item>Suez, Egypt</item>
        <item>Luxor, Egypt</item>
        <item>El Mahalla El Kubra, Egypt</item>
        <item>Tanta, Egypt</item>
        <item>Asyut, Egypt</item>
        <item>Ismailia, Egypt</item>
        <item>Faiyum, Egypt</item>
        <item>Zagazig, Egypt</item>
        <item>Aswan, Egypt</item>
        <item>Damanhur, Egypt</item>
        <item>Minya, Egypt</item>
        <item>Beni Suef, Egypt</item>
        <item>Hurghada, Egypt</item>
        <item>Qena, Egypt</item>
        <item>Sohag, Egypt</item>
        <item>Shibin El Kom, Egypt</item>
        <item>Banha, Egypt</item>
        <item>Arish, Egypt</item>
        <item>Mallawi, Egypt</item>
        <item>Bilbais, Egypt</item>
        <item>Marsa Matruh, Egypt</item>
        <item>Idfu, Egypt</item>
        <item>Mit Ghamr, Egypt</item>
        <item>Al Minya, Egypt</item>
        <item>Kafr El Sheikh, Egypt</item>
        <item>Dikirnis, Egypt</item>
        <item>Damietta, Egypt</item>
        <item>Sinai, Egypt</item>
        <item>Al Mansurah, Egypt</item>
        <item>Al Arish, Egypt</item>
        <item>Ain Sukhna, Egypt</item>
        <item>Ras Gharib, Egypt</item>
        <item>Al Khankah, Egypt</item>
        <item>Al Faiyum, Egypt</item>
        <item>Al Ibrahimiyah, Egypt</item>
        <item>Bani Mazar, Egypt</item>
        <item>Kafr Saqr, Egypt</item>
        <item>Bur Safajah, Egypt</item>
        <item>Nag Hammadi, Egypt</item>
        <item>Qasr, Egypt</item>
        <item>Marsa Alam, Egypt</item>
        <item>Kafr ad Dawwar, Egypt</item>
        <item>Qalyub, Egypt</item>
        <item>Abu Tij, Egypt</item>
        <item>Qift, Egypt</item>
        <item>Qus, Egypt</item>
    </string-array>

    <string name="Inbox" />
    <string name="Settings">Settings</string>
    <string name="inbox">Inbox</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="job_matches">Job Matches</string>
    <string name="customer_support">Customer Support</string>
    <string name="about_us">About Us</string>
    <string name="language">Language</string>
    <string name="sign_out">Sign Out</string>
    <string name="country">Country</string>
    <string name="mohammed_hesham">Mohammed Hesham</string>
    <string name="fbLink">https://www.facebook.com/aliabdelrahmanjr</string>
    <string name="verified">Verified</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_you_age">Enter you Age</string>
    <string name="enter_your_first_name">Enter your First Name</string>
    <string name="enter_you_last_name">Enter you Last Name</string>
    <string name="registration_page">Registration Page</string>
    <string name="address">Address</string>
    <string name="full_name">Full Name:</string>
    <string name="age">Age:</string>
    <string-array name="Fields">
        <item>AI Developer</item>
        <item>Accountant</item>
        <item>Data Scientist</item>
        <item>Graphic Designer</item>
        <item>Web Developer</item>
    </string-array>
    <string name="enter_you_number">Enter you Number</string>
    <string name="enter_you_password">Enter your Password</string>
    <string name="enter_you_name">Enter you Name</string>
    <string name="enter_you_email">Enter you Email</string>
    <string name="tc">TC</string>
    <string name="read_terms_and_conditions_here">Read Terms and Conditions Here</string>
    <string name="register">Register</string>
    <string name="existing_user_login_here">Existing User? Login Here</string>
    <string name="app_info">Easy Reach recruitment application</string>
    <string name="version_info">Beta Version</string>
    <string name="social_media_accounts">Social Media Accounts</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="easyreach_logo">EasyReach Logo</string>
    <string name="tag">\@easyreach</string>
    <string name="ChooseTitle"> CHOOSE IF YOU WANT TO OFFER JOBS OR TO BE HIRED.</string>
    <string name="org_version_info">Organanization Version info</string>
    <string name="post_a_job">Post A Job</string>
    <string name="facebook_page">Facebook Page</string>
    <string name="social_media">\@EasyReachDev</string>
    <string name="instagram_page">Instagram Page</string>
    <string name="year_of_experience">" Years"</string>
    <string name="no_messages">No Messages</string>
    <string name="sent_messages">Sent Messages</string>
    <string name="cv">CV</string>
    <string name="confirm_your_password">Confirm your Password</string>
    <string name="write_your_message">Write your Message</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>