<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuProfile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile"
     />
    <item
    android:id="@+id/menuLanguage"
    android:icon="@drawable/baseline_language_24"
    android:title="@string/language"
    />
    <item
        android:id="@+id/menuCountry"
        android:icon="@drawable/baseline_other_houses_24"
        android:title="@string/country"
        />
    <item
        android:id="@+id/menuNotifications"
        android:icon="@drawable/baseline_circle_notifications_24"
        android:title="@string/notifications"
        />
    <item
        android:id="@+id/menuInbox"
        android:icon="@drawable/baseline_all_inbox_24"
        android:title="@string/inbox"
        />
    <item
        android:id="@+id/menuSettings"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/Settings"
        />
    <item
        android:id="@+id/menuJobMatches"
        android:icon="@drawable/baseline_newspaper_24"
        android:title="@string/job_matches"
        />
    <item
        android:id="@+id/menuSupport"
        android:icon="@drawable/baseline_support_agent_24"
        android:title="@string/customer_support"
        />
    <item
        android:id="@+id/menuAboutUs"
        android:icon="@drawable/baseline_info_24"
        android:title="@string/about_us"
        />

    <item
        android:id="@+id/menuSignOut"
        android:icon="@drawable/baseline_logout_24"
        android:title="@string/sign_out"
        />

</menu>