<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background2"
    android:orientation="vertical"
    tools:context=".AboutUsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/layoutToolBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/toolbarBackground"
        android:backgroundTint="@color/MainColor"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/backButtonContainer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start">


            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/backAnimationView"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                app:lottie_rawRes="@raw/back"
                app:lottie_autoPlay="true"
                app:lottie_loop="false"
                app:lottie_speed="1"
                app:lottie_repeatMode="restart" />

        </FrameLayout>


        <TextView
            android:id="@+id/JobsViewerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="About us"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center"
            />

    </androidx.appcompat.widget.Toolbar>



    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/logo_transparent"
        android:layout_gravity="center"

        android:layout_marginTop="10dp"
        android:contentDescription="@string/easyreach_logo"/>


    <TextView
        android:id="@+id/version_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/org_version_info"
        android:textSize="26sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_below="@+id/logo_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/about_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/app_info"
        android:textSize="18sp"
        android:layout_below="@+id/version_info"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/social_media_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/social_media_accounts"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:fontFamily="@font/raleway_bold"
        android:textSize="18sp"
        android:layout_marginTop="32dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

        <ImageButton
            android:id="@+id/facebook_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/facebook"
            android:backgroundTint="#00F49F1C"
            android:contentDescription="@string/facebook_page" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/social_media"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginStart="4dp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">




        <ImageButton
            android:id="@+id/twitter_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/twitter"
            android:drawablePadding="8dp"
            android:textColor="@color/black"
            android:backgroundTint="#00FFFFFF"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/social_media"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/social_media"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginStart="4dp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">



        <ImageButton
            android:id="@+id/instagram_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:drawablePadding="8dp"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:src="@drawable/instagram"
            android:contentDescription="@string/instagram_page" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/social_media"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginStart="4dp"
            android:layout_gravity="center"/>



    </LinearLayout>


</LinearLayout>