<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/background2"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical"
                android:paddingLeft="25dp"
                android:paddingTop="15dp"
                android:paddingRight="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="218dp"
                        android:layout_height="208dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/logo_transparent"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/registration_page"
                        android:textColor="#000000"
                        android:padding="10dp"
                        android:textSize="23sp"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:gravity="bottom">

                        <EditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/custom_edittext"
                            android:hint="@string/enter_you_email"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/black"
                            android:padding="20dp"
                            android:drawableStart="@drawable/baseline_email_24"
                            android:drawableTint="@color/ALI"
                            android:drawablePadding="10sp"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_marginBottom="5dp"

                        android:gravity="bottom">

                        <EditText
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/custom_edittext"
                            android:inputType="textPersonName"
                            android:padding="20dp"
                            android:textColor="@color/black"
                            android:drawableStart="@drawable/baseline_person_24"
                            android:hint="@string/enter_you_name"
                            android:drawablePadding="10sp"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_marginBottom="5dp"
                        android:gravity="bottom">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/custom_edittext"
                            android:hint="@string/enter_you_password"
                            android:textColor="@color/black"
                            android:inputType="textPassword"
                            android:padding="20dp"
                            android:drawableStart="@drawable/baseline_lock_24"
                            android:drawablePadding="10sp"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_marginBottom="5dp"
                        android:gravity="bottom">

                        <EditText
                            android:id="@+id/phone_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:background="@drawable/custom_edittext"
                            android:hint="@string/enter_you_number"
                            android:inputType="phone"
                            android:padding="20dp"
                            android:ems="10"
                            android:drawableStart="@drawable/baseline_phone_android_24"
                            android:drawablePadding="10sp"/>

                    </com.google.android.material.textfield.TextInputLayout>
                    <RadioGroup
                        android:id="@+id/userTypeRadioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:padding="7dp"
                        android:orientation="horizontal"
                        android:background="@drawable/custom_edittext">

                        <RadioButton
                            android:id="@+id/jobSeekerRadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"

                            android:text="Job Seeker"
                            android:textColor="@color/black"
                            android:checked="true" />

                        <RadioButton
                            android:id="@+id/jobProviderRadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="Job Provider"
                            android:textColor="@color/black"
                            android:layout_marginLeft="120dp"/>
                    </RadioGroup>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/checkbox1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:text="@string/tc"
                            />

                        <TextView
                            android:id="@+id/TextView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="2dp"
                            android:textColor="@color/black"
                            android:text="@string/read_terms_and_conditions_here"
                            android:clickable="true"/>

                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@android:style/Widget.Material.Button.Borderless.Colored"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/grad_main"
                        android:padding="12dp"
                        android:text="@string/register"
                        android:textColor="@color/white"
                        />


                    <TextView
                        android:id="@+id/existing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:padding="15sp"
                        android:textColor="@color/black"
                        android:text="@string/existing_user_login_here"
                        android:layout_gravity="center_horizontal"
                        />
                </LinearLayout>



            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>