<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingLeft="25dp"
                android:paddingTop="55dp"
                android:paddingRight="25dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_horizontal">
                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/ProfileImage"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:scaleType="centerCrop"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/cv"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:riv_oval="true"
                        />
                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/mohammed_hesham"
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:text="@string/verified"
                        android:textColor="@color/color_bubble"
                        android:textSize="20sp"
                        android:layout_gravity="center_horizontal"/>
                    
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:text="@string/address"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:layout_gravity="start" />

                </LinearLayout>                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:text="@string/age"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:layout_gravity="start" />

                </LinearLayout>                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:text="Experience Field"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:layout_gravity="start" />

                </LinearLayout>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/forgetPasswordButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:padding="12dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:background="@drawable/custom_edittext"
                    android:backgroundTint="@color/blue_200"
                    android:text="@string/forgot_password"/>
            </LinearLayout>

        </ScrollView>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>